tests/specs/npm/byonm_main_path_traversal/main.cjs
const pkg = require("evil-pkg");
console.log("ERROR: should not have loaded:", JSON.stringify(pkg));
